# pihole-device-tracker

./: .gitignore  LICENSE  README.md  README.ru.md  hacs.json  pyproject.toml  requirements.txt  setup_files.py  setup_files_hacs.py
custom_components/pihole_device_tracker/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  device_tracker.py  manifest.json  sensor.py  strings.json
custom_components/pihole_device_tracker/translations/: de.json  en.json  ru.json
tests/: __init__.py  test_api.py  test_pihole_connection.py
tests/pihole_output/: pihole_response.html  pihole_response.json
